--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -6,6 +6,7 @@
 // Partials
 @import "partials/typography";
 @import "partials/buttons";
+@import "partials/images";
 
 // Third-party
 // @import "vendor/colorpicker";
