--- a/app/scss/partials/_base.scss
+++ b/app/scss/partials/_base.scss
@@ -31,5 +31,19 @@ $header-font-weight: $bold;
         width: 33%;
         display: flex;
         flex-direction: column;
+        padding: 10px;
+        text-align: center;
+        border: 1px solid #ccc;
+        margin: 10px;
+        border-radius: 3px;
+        -webkit-box-shadow: 0 10px 6px -6px #777;
+	   -moz-box-shadow: 0 10px 6px -6px #777;
+	        box-shadow: 0 10px 6px -6px #777;
+    }
+
+    .pokemon__name {
+        margin: 10px auto;
+        border-bottom: 1px solid #CCCCCC;
+        padding-bottom: 15px;
     }
 }
