--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2,7 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab");
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -69,8 +69,28 @@ table {
     border-bottom: 1px solid #CCCCCC;
     padding-bottom: 15px; }
 
+.header {
+  height: 425px;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #222222;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-line-pack: center;
+  align-content: center; }
+  .header h1 {
+    margin-bottom: 20px; }
+
 body {
-  font-family: 'Roboto Slab', serif; }
+  font-family: "Montserrat", serif; }
 
 h1 {
   font-size: 2em; }
@@ -89,6 +109,21 @@ h5 {
 
 h6 {
   font-size: .7em; }
+
+button[name="random"] {
+  height: 45px;
+  width: 200px;
+  border-radius: 25px;
+  border: none;
+  background-color: transparent;
+  font-family: "Montserrat", serif;
+  border: 1px solid #FFFFFF;
+  color: #FFFFFF;
+  font-size: 1em; }
+  button[name="random"]:hover {
+    color: #222222;
+    background-color: #FFFFFF;
+    cursor: pointer; }
 
 .pokemon__image {
   width: 60%;
