--- a/app/css/main.css
+++ b/app/css/main.css
@@ -49,26 +49,6 @@ table {
 .pokemon {
   padding: 20px; }
 
-.row {
-  display: -ms-flexbox;
-  display: flex; }
-  .row > div {
-    width: 33%;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    padding: 10px;
-    text-align: center;
-    border: 1px solid #ccc;
-    margin: 10px;
-    border-radius: 3px;
-    box-shadow: 0 10px 6px -6px #777; }
-  .row .pokemon__name {
-    margin: 10px auto;
-    border-bottom: 1px solid #CCCCCC;
-    padding-bottom: 15px; }
-
 .header {
   height: 425px;
   text-align: center;
@@ -88,6 +68,71 @@ table {
   align-content: center; }
   .header h1 {
     margin-bottom: 20px; }
+
+.row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  padding-top: 20px;
+  background-color: #EDEDED; }
+  .row > div {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding: 10px;
+    text-align: center;
+    margin: 10px;
+    background-color: #FFFFFF;
+    border-radius: 3px;
+    box-shadow: 0 10px 6px -6px #DDDDDD; }
+    .row > div:hover {
+      box-shadow: 0 10px 6px -6px #777; }
+  .row .pokemon__name {
+    margin: 10px auto;
+    border-bottom: 1px solid #CCCCCC;
+    padding-bottom: 15px;
+    text-transform: capitalize; }
+
+.pokemon__list {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  .pokemon__list h2 {
+    font-size: 1em; }
+  .pokemon__list p {
+    font-size: .9em; }
+
+@media screen and (min-width: 969px) {
+  .row {
+    -ms-flex-pack: center;
+    justify-content: center; }
+    .row > div {
+      width: 29%; } }
+
+@media screen and (max-width: 968px) and (min-width: 650px) {
+  .row {
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+    .row > div {
+      width: 43%; } }
+
+@media screen and (max-width: 649px) {
+  .row {
+    -ms-flex-pack: center;
+    justify-content: center; }
+    .row > div {
+      width: 75%; } }
 
 body {
   font-family: "Montserrat", serif; }
